--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <link rel="stylesheet" href="style.css">
-<h1>Muita Chuva...</h1>
 
-<img id="imagem_1" src= "chuva.jpg">
+<h1> Muita chuva...</h1>
+
+
+
+<img id="imagem_1" src="gotachuva.jpg">
+
